ikwen search uses JSONp minor bug fixes

--- a/foundation/accesscontrol/templates/accesscontrol/profile.html
+++ b/foundation/accesscontrol/templates/accesscontrol/profile.html
@@ -108,7 +108,7 @@
                             {% endif %}
                             {% if is_company %}
                                 <li>
-                                    <label>{% trans "Site web" %}</label>
+                                    <label>{% trans "Website" %}</label>
                                     <span>{{ service.url }} - <a href="{{ service.url|append_auth_tokens:request }}">{% trans "Visit" %}</a></span>
                                 </li>
                             {% endif %}
