--- a/foundation/core/templates/core/console.html
+++ b/foundation/core/templates/core/console.html
@@ -11,7 +11,7 @@
         #cover nav {background: #fff; height: 42px; width: 100%}
         #cover nav ul {margin: 0; padding: 0}
         #cover nav li {border-right: 1px solid #ddd; display: inline-block; height: 42px; 
-            overflow: hidden; padding-top: 9px; text-align: center; width: 49.5%}
+            overflow: hidden; padding-top: 9px; text-align: center; width: 49.4%}
         #cover nav li:last-child {border-right: none}
         #cover nav li a {color: #587389}
         #cover nav li a:hover {text-decoration: none}
@@ -69,7 +69,7 @@
                             {% if service.config.logo.name %}
                                 <img src="{{ service.config.logo.url }}" width="30" />
                             {% endif %}
-                            {{ service.project_name }}
+                            <a href="{{ service.url }}">{{ service.project_name }}</a>
                         </h3>
                         <div class="AccessRequest">
                             <h4>
@@ -138,7 +138,7 @@
                         col2Height = $col2.height();
                     var colCycle = col1Height > col2Height ? [$col2, $col1] : [$col1, $col2];
                     $.getJSON('{% url 'ikwen:console' %}',
-                        {start: start, key: '{{ request.GET.key }}', rand: '{{ request.GET.rand }}', format: 'json'},
+                        {target: '{{ request.GET.target }}', start: start, key: '{{ request.GET.key }}', rand: '{{ request.GET.rand }}', format: 'json'},
                         function(events) {
                         if (events.length == 0) {
                             dataSourceEmpty = true;
