--- a/foundation/core/templates/core/snippets/console_event_list_mobile.html
+++ b/foundation/core/templates/core/snippets/console_event_list_mobile.html
@@ -1,17 +1,19 @@
 {% load humanize %}
 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
     {% for event in event_list %}
-        <div id="{{ event.id }}" class="{{ event.service.project_name_slug }} card subtle-shade" data-base-url="{{ event.service.url }}">
+        {% with service=event.service %}
+        <div id="{{ event.id }}" class="{{ service.project_name_slug }} card subtle-shade" data-base-url="{{ service.url }}">
             <h3>
-                {% if event.service.config.logo.name %}
-                    <img src="{{ event.service.config.logo.url }}" width="30" />
+                {% if service.config.logo.name %}
+                    <img src="{{ service.config.logo.url }}" width="30" />
                 {% endif %}
-                <span>{{ event.service.project_name }}</span>
+                <a href="{{ service.url }}">{{ service.project_name }}</a>
                 <time>{{ event.created_on|naturaltime }}</time>
             </h3>
             <div class="{{ event.event_type.codename }}">
                 <div class="content row" style="margin-top: 20px"></div>
             </div>
         </div>
+        {% endwith %}
     {% endfor %}
 </div>
