--- a/foundation/flatpages/templates/flatpages/change_flatpage.html
+++ b/foundation/flatpages/templates/flatpages/change_flatpage.html
@@ -44,6 +44,7 @@
 
 {% block js %}
     {{ block.super }}
+    <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
     <script type="text/javascript">
         (function() {
             $('div#admin-nav .flatpages').addClass('active');
@@ -57,6 +58,30 @@
                     ikwen.showFloatingNotice('{% trans "Page successfully added." %}', '', 6);
                 {% endif %}
             {% endif %}
+
+            /** Tiny MCE **/
+            tinymce.init({
+              selector: 'textarea',
+              height: 500,
+              theme: 'modern',
+              plugins: [
+                'advlist autolink lists link image charmap print preview hr anchor pagebreak',
+                'searchreplace wordcount visualblocks visualchars code fullscreen',
+                'insertdatetime media nonbreaking save table contextmenu directionality',
+                'emoticons template paste textcolor colorpicker textpattern imagetools codesample'
+              ],
+              toolbar1: 'insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',
+              toolbar2: 'print preview media | forecolor backcolor emoticons | codesample',
+              image_advtab: true,
+              templates: [
+                { title: 'Test template 1', content: 'Test 1' },
+                { title: 'Test template 2', content: 'Test 2' }
+              ],
+              content_css: [
+                '//fonts.googleapis.com/css?family=Lato:300,300i,400,400i',
+                '//www.tinymce.com/css/codepen.min.css'
+              ]
+             });
         })()
     </script>
 {% endblock %}
