- Community management corrected - Access granting corrected - Register and sign in decoupled - Phone really made optional on register form

--- a/foundation/accesscontrol/templates/accesscontrol/forgotten_password.html
+++ b/foundation/accesscontrol/templates/accesscontrol/forgotten_password.html
@@ -32,14 +32,14 @@
         {% else %}
             {% if request.GET.emailSendFailed %}
                 <div class="failure">
-                    {% trans "An unknown error occured while sending e-mail. Please try again later" %}
+                    {% trans "An unknown error occured while sending e-mail. Please try again later." %}
                 </div>
                 <a href="{% url 'index' %}"> {% trans "Home" %} </a>
             {% elif request.GET.notFound %}
-                <div class="failure"> {% trans "E-mail non trouvé; veuillez vérifier SVP" %}.</div>
+                <div class="failure"> {% trans "E-mail not found. Please check and try again." %}</div>
             {% endif %}
             <div class="directions">
-                {% trans "Please provide your email to receive password reset information." %}.
+                {% trans "Please provide your email to receive password reset information." %}
                 {# TODO: Allow people to retrieve password with phone number as well #}
             </div>
             <div id="forgotten-pwd">
@@ -57,6 +57,6 @@
         {% endif %}
     </div>
 {% endblock %}
-{% block custom_js %}
-    {% include 'core/snippets/google_analytics.html' %}
+{% block js %}
+    {{ config.scripts|safe }}
 {% endblock %}
