--- a/foundation/accesscontrol/templates/accesscontrol/community.html
+++ b/foundation/accesscontrol/templates/accesscontrol/community.html
@@ -26,7 +26,7 @@
 {% endblock %}
 
 {% block breadcrumb_location %}
-    <li>{% trans "Collaborators" %}</li>
+    <li>{% trans "Community" %}</li>
 {% endblock %}
 
 {% block admin_content %}
